# FDX

./: .gitignore  .pre-commit-config.yaml  README.md  contributors.md  pyproject.toml  references.md
notebooks/: FDM1d.ipynb  FDM2d.ipynb
scripts/: build.sh  check.sh  pre-commit.sh  publish.sh  use_example.py  use_fdm1d_derivative.py  use_fdx1d_derivative.py  use_fdx2d_derivatives.py  use_weights.py  viz_animation.py
src/fdx/: __init__.py  finite_differences_grid.py  fornberg_weights.py  taylor_table_weights.py  utils.py
tests/: test_basics.py  test_grid1d.py  test_grid2d.py  test_operators.py  test_weights.py
