[project]
name = "fdx"
version = "0.1.0"
description = "A high-order Finite-Difference eXtended (FDX) library for Python."
readme = "README.md"
authors = [
    { name = "Manuel A. Diaz", email = "manuel.ade@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.3",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle, pyflakes, isort

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
